--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,9 +1,9 @@
+// A task runner that runs a python program
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "0.1.0",
     "command": "python",
-    "isShellCommand": true,
-    "args": ["${file}"],
-    "showOutput": "always"
+    "windows": {
+        "command": "C:/Users/Gabriel/AppData/Local/Programs/Python/Python35-32/python.exe"
+    },
+    "args": ["${file}"]
 }
